--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,8 @@ spring:
       enabled: true
   datasource:
     url: jdbc:h2:mem:testdb  # H2 ?? ??
+  messages:
+    basename: errors
 server:
   servlet:
     session:
